# domain-scout

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  benchmark_cache.py  benchmark_scorer.py  fix.py  fix_c.py  fix_redef.py  fix_warnings.py  format.py  gen_fix.py  mkdocs.yml  plan.md  plan_review.py  pyproject.toml  refactor.py  run_fix.py  run_fix2.py  run_tests.sh  split_methods.py  split_others.py  split_run_strategies.py  step2.py  step3.py  test_extract.py  test_typer.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  publish.yml  release.yml
baselines/: a-auto-20260224.json  aapl-auto-20260224.json  abbvie-20260220.json  abnb-auto-20260224.json  abt-auto-20260224.json  achc-auto-20260224.json  acn-auto-20260224.json  adi-auto-20260224.json  adm-auto-20260224.json  adma-auto-20260224.json  adp-auto-20260224.json  adv-auto-20260224.json  aee-auto-20260224.json  aep-auto-20260224.json  afgd-auto-20260224.json  agl-auto-20260224.json  aig-auto-20260224.json  ait-auto-20260224.json  aiz-auto-20260224.json  ajg-auto-20260224.json  akam-auto-20260224.json  alb-auto-20260224.json  algn-auto-20260224.json  all-auto-20260224.json  allt-auto-20260224.json  amat-auto-20260224.json  amcx-auto-20260224.json  amd-auto-20260224.json  amex-20260220.json  amgn-auto-20260224.json  amh-auto-20260224.json  amp-auto-20260224.json  amt-auto-20260224.json  anet-auto-20260224.json  angi-auto-20260224.json  anip-auto-20260224.json  apd-auto-20260224.json  aph-auto-20260224.json  apo-auto-20260224.json  app-auto-20260224.json  (+359 more)
docs/: api.md  architecture.md  deep-mode.md  examples.md  fingerprint-mode.md  getting-started.md  gleif-expansion.md  index.md  multi-seed.md  rdap-cctld-support.md
domain_scout/: __init__.py  _logging.py  _metrics.py  api.py  cache.py  cli.py  config.py  delta.py  eval.py  eval_ground_truth.yaml  models.py  scout.py  scout.py.tmp
domain_scout/matching/: entity_match.py  scoring.py
domain_scout/resolve/: __init__.py  gleif_ingest.py  gleif_lookup.py
domain_scout/scorer/: __init__.py  logistic_v1.json
domain_scout/sources/: ct_logs.py  ctscout_remote.py  dns_fingerprint.py  dns_utils.py  local_parquet.py  rdap.py
domain_scout/tests/: conftest.py  test_acceptance.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_ct.py  test_ctscout_remote.py  test_delta.py  test_dns_utils.py  test_eval.py  test_evidence.py  test_fingerprint.py  test_gleif_expansion.py  test_integration.py  test_invariants.py  test_local_parquet.py  test_logging.py  test_matching.py  test_metrics.py  test_models.py  test_multi_seed.py  test_rdap.py  test_rdap_security.py  test_scorer.py  test_scoring_logic.py  test_scout.py  test_scout_internals.py  test_shared_client_and_phase_errors.py  test_subsidiary.py
scripts/: auto_label.py  manual_review_sample.csv
