[project]
name = "domain-scout"
version = "0.2.0"
description = "Discover internet domains associated with a business entity via CT logs, RDAP, and DNS"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    "dnspython>=2.7.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.10.0",
    "rapidfuzz>=3.11.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
]

[project.scripts]
domain-scout = "domain_scout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit real external services (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.9.0",
]
