[project]
name = "domain-scout-ct"
version = "0.11.0"
description = "Discover internet domains associated with a business entity via CT logs, RDAP, and DNS"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [{name = "Ming Yang"}]
keywords = ["domain-discovery", "certificate-transparency", "rdap", "dns", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Name Service (DNS)",
    "Typing :: Typed",
]
dependencies = [
    "dnspython>=2.7.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.10.0",
    "rapidfuzz>=3.11.0",
    "structlog>=24.4.0",
    "tldextract>=5.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]
cache = ["duckdb>=1.0.0"]
gleif = ["duckdb>=1.0.0"]
metrics = ["prometheus-client>=0.21.0"]
eval = ["pyyaml>=6.0"]
all = ["domain-scout-ct[api,cache,gleif,metrics,eval]"]

[project.urls]
Documentation = "https://minghsuy.github.io/domain-scout"
Repository = "https://github.com/minghsuy/domain-scout"
Changelog = "https://github.com/minghsuy/domain-scout/blob/main/CHANGELOG.md"
Issues = "https://github.com/minghsuy/domain-scout/issues"

[project.scripts]
domain-scout = "domain_scout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain_scout"]
exclude = ["domain_scout/tests"]

[tool.hatch.build.targets.wheel.force-include]
"domain_scout/scorer/logistic_v1.json" = "domain_scout/scorer/logistic_v1.json"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit real external services (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "mypy>=1.14.0",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.9.0",
    "pyarrow>=23.0.1",
]
